[package]
name = "eternalog"
version = "0.1.0"
authors = ["Rorical <rorical@kora.moe>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
